menambahkan fitur toggle tampilkan satuan

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
           id="checkbox-reset-otomatis"
           value="nilai-checkbox"
         />
+        <label for="checkbox-tampilkan-satuan" class="label-tampilkan-satuan"
+          >Tampilkan Satuan</label
+        >
+        <input
+          type="checkbox"
+          checked
+          id="checkbox-tampilkan-satuan"
+          value="nilai-checkbox"
+        />
         <br />
         <button type="reset" id="reset-button" onclick="resetSimulasi()">
           Reset
