--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Simulasi Gerak Jatuh Bebas</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <link rel="icon" type="image/x-icon" href="/public/favicon.png" />
   </head>
   <body>
@@ -90,8 +90,10 @@
         Copyright © 2023 Candimadam & Rizky Fauzi Ilmi. All rights reserved.
       </p>
     </div>
-    <script src="githubAPI.js"></script>
-    <script src="planet.js"></script>
-    <script src="script.js"></script>
+    <script src="config/config.js"></script>
+    <script src="api/githubAPI.js"></script>
+    <script src="util/planet.js"></script>
+    <script src="util/script.js"></script>
+    <script src="util/listener.js"></script>
   </body>
 </html>
